加入 netty 进行通信,定义通信协议解决沾包, 拓展 URI 通信协议类型