@@ -1,8 +1,8 @@
 package io.ryan;
 
-
-import io.ryan.common.URL;
-import io.ryan.protocol.server.HttpServerImpl.HttpServer;
+import io.ryan.common.dto.URI;
+import io.ryan.common.constant.RpcProtocol;
+import io.ryan.protocol.server.NettServerImpl.NettyServer;
 import io.ryan.protocol.server.RpcServer;
 import io.ryan.protocol.server.RpcServerBuilder;
 import io.ryan.provider.ServiceProvider;
@@ -12,14 +12,15 @@ import io.ryan.serviceImpl.HelloServiceImpl;
 
 public class Main {
     public static void main(String[] args) {
+
         ServiceProvider.register(HelloServiceImpl.class);
         // 注册中心注册
-        RedisRegister.register(HelloService.class.getName(), new URL("localhost", 8080));
+        RedisRegister.register(HelloService.class.getName(), new URI("localhost", 8080, RpcProtocol.TCP));
 
         RpcServer server = RpcServerBuilder.builder()
                 .host("localhost")
                 .port(8080)
-                .rpcServer(HttpServer.class)
+                .rpcServer(NettyServer.class)
                 .build();
 
         server.start();
