@@ -1,6 +1,7 @@
 package io.ryan.register;
 
-import io.ryan.common.URL;
+import io.ryan.common.dto.URI;
+import io.ryan.common.constant.RpcProtocol;
 import org.junit.Test;
 
 import java.util.List;
@@ -10,9 +11,9 @@ public class RedisRegisterTest {
     @Test
     public void register() {
 
-        RedisRegister.register("io.ryan.service.HelloService", new URL("localhost", 8080));
-        List<URL> urls = RedisRegister.get("io.ryan.service.HelloService");
-        System.out.println("Registered URLs: " + urls);
+        RedisRegister.register("io.ryan.service.HelloService", new URI("localhost", 8080, RpcProtocol.HTTP));
+        List<URI> URIS = RedisRegister.get("io.ryan.service.HelloService");
+        System.out.println("Registered URLs: " + URIS);
 
     }
 
